name:                sensit-haskell
version:             0.1.0.0
synopsis:            Sens'it API client
description:         Please see README.md
homepage:            http://github.com/julienXX/sensit-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Julien Blanchard
maintainer:          julien@sideburns.eu
copyright:           2015 Julien Blanchard
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sensit
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , lens >= 4.12.0
                       , aeson
                       , lens-aeson
                       , wreq >= 0.4.0.0
  default-language:    Haskell2010

test-suite sensit-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sensit-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/julienXX/sensit-haskell
